Updated the gradle build, cleaned up Java 17 deprecation warnings
Gradle build now works in limited testing.  Full testing necessary.
Cleaned up a large number of deprecation warnings related to the Java
17 update (and others).  There are still a few remaining but I'm leaving
these as they look a bit more fragile.